// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SearchHit should render SearchHit successfully 1`] = `
<body>
  <div>
    <div
      class="ds-card"
      data-color="accent"
      data-variant="default"
    >
      <div
        class="ds-card__block"
      >
        <a
          class="link"
          href="Search hit title href"
        >
          <h2
            class="ds-heading title"
            data-size="sm"
          >
            Search hit title
          </h2>
        </a>
        Search hit content
      </div>
    </div>
  </div>
</body>
`;

exports[`SearchHit should render SearchHit with empty title successfully 1`] = `
<body>
  <div>
    <div
      class="ds-card"
      data-color="accent"
      data-variant="default"
    >
      <div
        class="ds-card__block"
      >
        <a
          class="link"
          href=""
        >
          <h2
            class="ds-heading title"
            data-size="sm"
          />
        </a>
      </div>
    </div>
  </div>
</body>
`;
